Added category get by id and refactoring
